# python-microservices-patterns

./: .gitignore  README.md  docker-compose-saga-choreography.yml  docker-compose-saga-orchestration.yml  docker-compose-sage-choreography.yml  saga-orchestration.yml
compose/: cqrs.yml  event-sourcing.yml  saga-orchestration.yml
cqrs-example/: README.md  alembic.ini  pyproject.toml
cqrs-example/app/: cli.py  db.py  event_consumer.py  main.py  models.py  producers.py  services.py
cqrs-example/migrations/: env.py
cqrs-example/migrations/versions/: 1191d11f60ca_initial_migration.py
event-sourcing-example/: README.md
event-sourcing-example/booking/: Dockerfile  alembic.ini  pyproject.toml
event-sourcing-example/booking/app/: amqp_client.py  applications.py  cli.py  db.py  domainmodels.py  main.py  models.py  services.py  settings.py
event-sourcing-example/booking/migrations/: env.py
event-sourcing-example/booking/migrations/versions/: 5ffab98ff42c_add_domain_uuid_to_booking_sqlalchemy_.py  c79d82478990_initial_migrations.py  fa1e57d87087_initial_migrations.py
event-sourcing-example/db_init_scripts/: docker_postgres_init.sql
event-sourcing-example/parking/: pyproject.toml  start_dev.sh
event-sourcing-example/parking/app/: amqp_client.py  cli.py  db.py  main.py  models.py  services.py  settings.py
event-sourcing-example/parking/migrations/: env.py
event-sourcing-example/parking/migrations/versions/: 9201fb72ddb9_initial_migration.py
saga-choreograhpy-example/: README.md  docker-compose.yml
saga-choreograhpy-example/billing/: pyproject.toml
saga-choreograhpy-example/billing/app/: amqp_client.py  cli.py  main.py  models.py  mutations.py  object_types.py  pydantic_models.py  queries.py  schema.py  services.py  settings.py
saga-choreograhpy-example/billing/migrations/: env.py
saga-choreograhpy-example/billing/migrations/versions/: 04d2920ac9fd_initial_migration.py  1cc554451896_update_paymentreconciliation_billing_.py  207207faeb87_initial_migration.py  3a6f9142051f_add_total_field_to_billingrequest_model.py  780e8c4bae27_add_backref_to_paymentreconciliation_.py  bcb6a47bfbbe_create_paymentreconciliation_model.py
saga-choreograhpy-example/booking/: Dockerfile  alembic.ini  pyproject.toml
saga-choreograhpy-example/booking/app/: amqp_client.py  cli.py  consumers.py  db.py  dependencies.py  main.py  message_handlers.py  mocks.py  models.py  mutations.py  object_types.py  pika_client.py  producers.py  pydantic_models.py  queries.py  redis.py  schema.py  services.py  settings.py  types.py
saga-choreograhpy-example/booking/migrations/: env.py  script.py.mako
saga-choreograhpy-example/booking/migrations/versions/: 74723402e8a3_initial_migrations.py  7f1605f94268_initial_migration.py  88a01597d38a_initial_migration.py  c41c4cfb8162_add_parking_space_uuid_field.py  caeb28082687_removal_of_description_column.py  ef59ac37e8cb_add_description_field.py  f96307a1d404_change_table_name_from_booking_to_.py
saga-choreograhpy-example/manager/: alembic.ini  pyproject.toml
saga-choreograhpy-example/manager/app/: amqp_client.py  cli.py  db.py  main.py  models.py  mutations.py  pydantic_models.py  services.py
saga-choreograhpy-example/manager/migrations/: env.py
saga-choreograhpy-example/manager/migrations/versions/: 91640caa1337_update_bookingrequest_approved_type_.py  cbe924e50027_initial_migration.py
saga-choreograhpy-example/parking/: Dockerfile  alembic.ini  pyproject.toml
saga-choreograhpy-example/parking/app/: amqp_client.py  cli.py  dependencies.py  main.py  models.py  mutations.py  object_types.py  pydantic_models.py  queries.py  schema.py  services.py  signals.py
saga-choreograhpy-example/parking/migrations/: env.py
saga-choreograhpy-example/parking/migrations/versions/: 2efeb1766d65_add_status_field.py  3a414c21545c_inital_migrations.py  f80a719aba3d_initial_migrations.py
saga-choreography-example/: README.md
saga-choreography-example/billing/app/: db.py  main.py  services.py
saga-choreography-example/booking/: alembic.ini  pyproject.toml  start_dev.sh
saga-choreography-example/booking/app/: main.py  models.py  pydantic_models.py  services.py
saga-choreography-example/booking/migrations/: env.py
saga-choreography-example/booking/migrations/versions/: 29af7026cb10_rename_booking_parking_slot_uuid_to_.py  a2f83ffe751f_initial_migration.py  d6bb61f1e755_alter_parking_space_no_to_parking_slot_.py
saga-choreography-example/parking/: pyproject.toml
saga-choreography-example/parking/app/: db.py  models.py
saga-orchestration-example/: README.md
saga-orchestration-example/billing/: pyproject.toml
saga-orchestration-example/billing/app/: cli.py  main.py  models.py  services.py
saga-orchestration-example/billing/migrations/: env.py
saga-orchestration-example/booking/: Dockerfile  pyproject.toml
saga-orchestration-example/booking/app/: cli.py  main.py  models.py  sagas.py  services.py
saga-orchestration-example/booking/migrations/: env.py
saga-orchestration-example/parking/: parking_db.db  pyproject.toml
saga-orchestration-example/parking/app/: amqp_client.py  cli.py  main.py  models.py  services.py  settings.py
saga-orchestration-example/parking/migrations/: env.py
saga-orchestration-example/parking/migrations/versions/: 5e95058bcf50_update_parkingslot_status_default_value_.py  6935a5c10469_initial_migration.py
(+3 files in other folders)
