[tool.poetry]
name = "booking"
version = "0.1.0"
description = "Event Sourcing pattern example - Booking Service"
authors = ["roelzkie <badcoder28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.20.4"
SQLAlchemy = "^1.4.39"
aio-pika = "^8.0.3"
fire = "^0.4.0"
alembic = "^1.8.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
psycopg2-binary = "^2.9.3"
eventsourcing_sqlalchemy = "^0.2.0"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
