[tool.poetry]
name = "saga-choreograhpy-example"
version = "0.1.0"
description = "Saga's choreography pattern example"
authors = ["Roel Delos Reyes <badcoder28@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
fastapi = "0.75.2"
sqlmodel = "0.0.6"
redis = "4.2.2"
psycopg2-binary = "2.9.3"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
