[tool.poetry]
name = "saga-choreograhpy-example"
version = "0.1.0"
description = "Saga's choreography pattern example"
authors = ["Roel Delos Reyes <badcoder28@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.3"
fastapi = "0.75.2"
sqlmodel = "0.0.6"
psycopg2-binary = "2.9.3"
uvicorn = "0.17.6"
pydantic = "^1.9.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
