[tool.poetry]
name = "saga-choreograhpy-example-booking-service"
version = "0.1.0"
description = "Saga's choreography pattern example - Booking service"
authors = ["Roel Delos Reyes <badcoder28@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.3"
fastapi = "0.75.2"
psycopg2-binary = "2.9.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.0"
aio-pika = "^7.2.0"
fire = "^0.4.0"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.36"
pydantic-sqlalchemy = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
