[tool.poetry]
name = "parking"
version = "0.1.0"
description = "Saga's orchestration pattern example - Parking service"
authors = ["roelzkie <badcoder28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.1"
aio-pika = "^7.2.0"
fire = "^0.4.0"
alembic = "^1.7.7"
psycopg2-binary = "2.9.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
